<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".games.MathGame">

    <ImageView
        android:id="@+id/memory_background_image2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="fitXY"
        android:scaleX="3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/math_game_background_ui"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/background_title_screen" />

    <TextView
        android:id="@+id/math_game_background_ui"
        android:layout_width="0dp"
        android:layout_height="130dp"
        android:alpha="1"
        android:background="@drawable/background_memory_ui"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.151"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/math_game_img_chatbox"
        android:layout_width="285dp"
        android:layout_height="164dp"
        android:layout_marginEnd="84dp"
        android:layout_marginBottom="56dp"
        android:contentDescription="@string/image"
        android:rotationY="-176"
        android:scaleX="2"
        android:scaleY="1.5"
        app:layout_constraintBottom_toBottomOf="@+id/math_game_img_dog"
        app:layout_constraintEnd_toEndOf="@+id/math_game_img_dog"
        app:srcCompat="@drawable/pngwing_chat_box"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/math_game_dog_dialogue"
        android:layout_width="199dp"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center"
        android:text="@string/math_game_default_dialogue"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="@+id/math_game_img_chatbox"
        app:layout_constraintEnd_toEndOf="@+id/math_game_img_chatbox"
        app:layout_constraintHorizontal_bias="0.383"
        app:layout_constraintStart_toStartOf="@+id/math_game_img_chatbox"
        app:layout_constraintTop_toTopOf="@+id/math_game_img_chatbox"
        app:layout_constraintVertical_bias="0.326"
        tools:ignore="TextSizeCheck" />

    <ImageView
        android:id="@+id/math_game_img_dog"
        android:layout_width="203dp"
        android:layout_height="113dp"
        android:contentDescription="@string/blackie_content_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/blackie_talking"
        tools:ignore="ImageContrastCheck" />

    <ProgressBar
        android:id="@+id/math_game_time_bar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="0dp"
        android:layout_height="23dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="10dp"
        android:alpha="0.9"
        android:background="@color/dutch_white"
        android:padding="5dp"
        android:progress="30"
        android:progressBackgroundTint="#B00020"
        android:progressBackgroundTintMode="screen"
        android:progressTint="@color/selected"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/math_game_score" />

    <TextView
        android:id="@+id/math_game_time_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/finger_paint"
        android:shadowColor="@color/white"
        android:shadowDx="3"
        android:shadowDy="3"
        android:shadowRadius="2"
        android:text="00"
        android:textColor="@color/third_colour"
        android:textSize="35sp"
        app:layout_constraintBottom_toTopOf="@+id/math_game_time_bar"
        app:layout_constraintEnd_toEndOf="@+id/math_game_time_bar"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="@+id/math_game_time_bar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/math_game_score"
        android:layout_width="165dp"
        android:layout_height="31dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/finger_paint"
        android:gravity="center|start"
        android:shadowColor="@color/white"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="1"
        android:text="Puntuación: 0"
        android:textColor="@color/dutch_white"
        android:textSize="21sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/math_difficulty_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="75dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/finger_paint"
        android:gravity="center|start"
        android:shadowColor="@color/white"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="1"
        android:text="Modo:"
        android:textColor="@color/dutch_white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/math_game_score"
        app:layout_constraintStart_toEndOf="@+id/math_game_score"
        app:layout_constraintTop_toTopOf="@+id/math_game_score" />

    <TextView
        android:id="@+id/math_game_question_text"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/shape_rectangle_rounded"
        android:fontFamily="@font/finger_paint"
        android:padding="11dp"
        android:text="@string/math_game_question_text"
        android:textColor="@color/third_colour"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/math_game_background_ui"
        app:layout_constraintTop_toBottomOf="@+id/math_game_background_ui" />

    <TextView
        android:id="@+id/math_game_answer_1"
        android:layout_width="120dp"
        android:layout_height="110dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="152dp"
        android:layout_marginEnd="227dp"
        android:background="@drawable/shape_rectangle_option"
        android:contentDescription="@string/math_game_answer1"
        android:fontFamily="@font/chelsea_market"
        android:gravity="center"
        android:onClick="check_answer"
        android:soundEffectsEnabled="false"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="@+id/memory_background_image2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/memory_background_image2"
        app:layout_constraintTop_toTopOf="@+id/memory_background_image2" />

    <TextView
        android:id="@+id/math_game_answer_2"
        android:layout_width="120dp"
        android:layout_height="110dp"
        android:layout_marginStart="70dp"
        android:background="@drawable/shape_rectangle_option"
        android:contentDescription="@string/math_game_answer2"
        android:fontFamily="@font/chelsea_market"
        android:gravity="center"
        android:onClick="check_answer"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:soundEffectsEnabled="false"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="@+id/math_game_answer_1"
        app:layout_constraintStart_toEndOf="@+id/math_game_answer_1"
        app:layout_constraintTop_toTopOf="@+id/math_game_answer_1"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/math_game_answer_3"
        android:layout_width="120dp"
        android:layout_height="110dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/shape_rectangle_option"
        android:contentDescription="@string/math_game_answer3"
        android:fontFamily="@font/chelsea_market"
        android:gravity="center"
        android:onClick="check_answer"
        android:soundEffectsEnabled="false"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="@+id/math_game_answer_1"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/math_game_answer_1"
        app:layout_constraintTop_toBottomOf="@+id/math_game_answer_1" />

    <TextView
        android:id="@+id/math_game_answer_4"
        android:layout_width="120dp"
        android:layout_height="110dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/shape_rectangle_option"
        android:contentDescription="@string/math_game_answer4"
        android:fontFamily="@font/chelsea_market"
        android:gravity="center"
        android:onClick="check_answer"
        android:soundEffectsEnabled="false"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="@+id/math_game_answer_2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/math_game_answer_2"
        app:layout_constraintTop_toBottomOf="@+id/math_game_answer_2" />

    <TextView
        android:id="@+id/math_game_start_game"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fontFamily="@font/finger_paint"
        android:gravity="center"
        android:onClick="start_game"
        android:shadowDx="2"
        android:text="@string/blob_game_start_text"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:visibility="gone" />

    <ImageView
        android:id="@+id/math_game_life_1"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/memory_background_image2"
        app:layout_constraintEnd_toEndOf="@+id/math_game_time_bar"
        app:layout_constraintHorizontal_bias="0.326"
        app:layout_constraintStart_toStartOf="@+id/math_game_time_bar"
        app:layout_constraintTop_toBottomOf="@+id/math_game_time_bar"
        app:layout_constraintVertical_bias="0.51"
        app:srcCompat="@drawable/heart_full" />

    <ImageView
        android:id="@+id/math_game_life_2"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/math_game_life_1"
        app:layout_constraintStart_toEndOf="@+id/math_game_life_1"
        app:layout_constraintTop_toTopOf="@+id/math_game_life_1"
        app:srcCompat="@drawable/heart_full" />

    <ImageView
        android:id="@+id/math_game_life_3"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/math_game_life_2"
        app:layout_constraintStart_toEndOf="@+id/math_game_life_2"
        app:layout_constraintTop_toTopOf="@+id/math_game_life_2"
        app:srcCompat="@drawable/heart_full" />

    <ImageView
        android:id="@+id/math_game_life_4"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/math_game_life_3"
        app:layout_constraintStart_toEndOf="@+id/math_game_life_3"
        app:layout_constraintTop_toTopOf="@+id/math_game_life_3"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/heart_full" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:fontFamily="@font/finger_paint"
        android:gravity="center"
        android:shadowColor="@color/white"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="1"
        android:text="Vidas: "
        android:textColor="@color/dutch_white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/math_game_life_1"
        app:layout_constraintEnd_toStartOf="@+id/math_game_life_1"
        app:layout_constraintTop_toTopOf="@+id/math_game_life_1"
        app:layout_constraintVertical_bias="0.49" />

</androidx.constraintlayout.widget.ConstraintLayout>